# PulseGrid

./: .env.example  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  PulseGrid.vix  README.md  vix.json
.github/workflows/: deploy.yml
migrations/: 20260420_001_init.down.sql  20260420_001_init.up.sql
public/: app.css  app.js  index.html  status.css  status.html  status.js
src/: main.cpp
src/pulsegrid/app/: AppBootstrap.cpp  AppBootstrap.hpp  MiddlewareRegistry.cpp  MiddlewareRegistry.hpp  RouteRegistry.cpp  RouteRegistry.hpp
src/pulsegrid/application/ports/: CheckResultRepository.hpp  Clock.hpp  EventBus.hpp  IdGenerator.hpp  IncidentRepository.hpp  MonitorRepository.hpp
src/pulsegrid/application/services/: CheckService.cpp  CheckService.hpp  IncidentService.cpp  IncidentService.hpp  MonitorService.cpp  MonitorService.hpp  StatusService.cpp  StatusService.hpp
src/pulsegrid/domain/check/: CheckResult.hpp  ResponseTime.hpp
src/pulsegrid/domain/incident/: Incident.hpp  IncidentState.hpp
src/pulsegrid/domain/monitor/: CheckInterval.hpp  Monitor.hpp  MonitorStatus.hpp
src/pulsegrid/domain/shared/: EntityId.hpp  Url.hpp
src/pulsegrid/infrastructure/checker/: CheckScheduler.cpp  CheckScheduler.hpp  HttpChecker.cpp  HttpChecker.hpp
src/pulsegrid/infrastructure/db/: DatabaseFactory.cpp  DatabaseFactory.hpp  SqliteCheckResultRepository.cpp  SqliteCheckResultRepository.hpp  SqliteIncidentRepository.cpp  SqliteIncidentRepository.hpp  SqliteMonitorRepository.cpp  SqliteMonitorRepository.hpp
src/pulsegrid/infrastructure/events/: WsEventBus.cpp  WsEventBus.hpp
src/pulsegrid/infrastructure/runtime/: AppLogger.hpp  SystemClock.hpp  UuidGenerator.hpp
src/pulsegrid/presentation/dto/: CreateMonitorRequest.hpp  MonitorResponse.hpp  StatusSummaryResponse.hpp
src/pulsegrid/presentation/http/: HealthController.cpp  HealthController.hpp  MonitorController.cpp  MonitorController.hpp  StatusPageController.cpp  StatusPageController.hpp
src/pulsegrid/presentation/ws/: StatusWsGateway.cpp  StatusWsGateway.hpp
src/pulsegrid/support/: Constants.hpp  Errors.hpp  Json.cpp  Json.hpp
tests/: test_basic.cpp
tests/application/: monitor_service_tests.cpp  status_service_tests.cpp
tests/domain/: incident_tests.cpp  monitor_tests.cpp
